# rust-book-api

./: Cargo.toml  Readme.md
migrations/2018-04-10-191715_records/: up.sql
src/: book.rs  db.rs  main.rs  schema.rs
