[package]
name = "hello-api"
version = "0.1.0"
authors = ["Sebastian Ziebell <sebastian.ziebell@asquera.de>"]

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "*"
r2d2-diesel = "*"
diesel = { version = "*", default-features = false, features = ["sqlite", "r2d2"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
